Create structure for studio
